versioned_docs/version-4.0/client-api/changes/content/_what-is-changes-api-java.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

The RavenDB client offers a push notification feature that allows you to receive messages from a server about events that occurred there.
You are able to subscribe to events for all documents, indexes, and operations as well as to indicate a particular one that you are interested in. 
This mechanism lets you notify users if something has changed without the need to do any expensive polling. 

## Accessing Changes API

The changes subscription is accessible by a document store through its `IDatabaseChanges` interface.

<TabItem value="changes_1" label="changes_1">
<CodeBlock language="java">
{`IDatabaseChanges changes();

IDatabaseChanges changes(String database);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **database** | String | Name of database to open changes API for. If `null`, the `Database` configured in DocumentStore will be used. |

| Return value | |
| ------------- | ----- |
| IDatabaseChanges | Instance implementing IDatabaseChanges interface. |

## Connection interface

`IDatabaseChanges` inherits from `IConnectableChanges<TChanges>` interface that represent the connection.

<TabItem value="connectable_changes" label="connectable_changes">
<CodeBlock language="java">
{`public interface IConnectableChanges<TChanges extends IDatabaseChanges> extends CleanCloseable \{

    boolean isConnected();

    void ensureConnectedNow();

    void addConnectionStatusChanged(EventHandler<VoidArgs> handler);

    void removeConnectionStatusChanged(EventHandler<VoidArgs> handler);

    void addOnError(Consumer<Exception> handler);

    void removeOnError(Consumer<Exception> handler);
\}
`}
</CodeBlock>
</TabItem>

## Subscriptions

In order to retrieve notifications you have to subscribe to server-side events by using one of the following methods:

- [forAllDocuments](../../client-api/changes/how-to-subscribe-to-document-changes.mdx#foralldocuments)
- [forAllIndexes](../../client-api/changes/how-to-subscribe-to-index-changes.mdx#forallindexes)
- [forAllOperations](../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#foralloperations)
- [forDocument](../../client-api/changes/how-to-subscribe-to-document-changes.mdx#fordocument)
- [forDocumentsInCollection](../../client-api/changes/how-to-subscribe-to-document-changes.mdx#fordocumentsincollection)
- [forDocumentsStartingWith](../../client-api/changes/how-to-subscribe-to-document-changes.mdx#fordocumentsstartingwith)
- [forIndex](../../client-api/changes/how-to-subscribe-to-index-changes.mdx#forindex)
- [forOperationId](../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#foroperation)

## Unsubscribing

In order to end subscription (stop listening for particular notifications) you must `close` it.

<TabItem value="changes_2" label="changes_2">
<CodeBlock language="java">
{`IDatabaseChanges subscription = store.changes();

subscription.ensureConnectedNow();

subscription.forAllDocuments().subscribe(Observers.create(change -> \{
    System.out.println(change.getType() + " on document " + change.getId());
\}));

try \{
    // application code here
\} finally \{
    if (subscription != null) \{
        subscription.close();
    \}
\}
`}
</CodeBlock>
</TabItem>

## Remarks

<Admonition type="note" title="">
One or more open Changes API connections will prevent a database from becoming idle and unloaded, regardless of [configuration value for database idle timeout](../../server/configuration/database-configuration.mdx#databasesmaxidletimeinsec)
</Admonition>


